# HPC_DAPP

./: .gitignore  CMakeLists.txt  Documentation_DAPP.md  README.md  exercice.c  process_samples.sdfg  report.md  requirements.txt  valeur.md
.dacecache/process_samples_dace/: CACHEDIR.TAG  dace.conf  program.sdfg  program.sdfgz
.dacecache/process_samples_dace/include/: hash.h  process_samples_dace.h
.dacecache/process_samples_dace/map/: map_cpp.json  map_py.json
.dacecache/process_samples_dace/sample/: process_samples_dace_main.cpp
.dacecache/process_samples_dace/src/cpu/: process_samples_dace.cpp
reveal.js/: index.html  package-lock.json
src/: dace_api.h  exercice.c  exercice_dace.py  my_sdfg.c  my_sdfg.cpp  my_sdfg.h
src/.dacecache/process_samples_dace/: dace.conf  dace_files.csv  program.sdfg
src/.dacecache/process_samples_dace/include/: hash.h
src/.dacecache/process_samples_dace/map/: map_py.json
